infrastructure/apps/grafana/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: grafana.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
